--- a/style.css
+++ b/style.css
@@ -1,30 +1,106 @@
+body {
+    background-color: rgb(70, 65, 75);
+}
+
 .box {
     /* display: flex;
     flex: 1 1 100px; */
     /* width: 640px; */
     display: grid;
     /* grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); */
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 0 650px;
+    grid-template-columns: auto auto auto auto;
+    /* padding: 0 650px; */
     /* justify-content: center;
     align-content: center; */
     /* grid-auto-flow: column; */
 }
 
+.zero {
+    grid-row: 5;
+    grid-column: span 2;
+    /* grid-column: 1/3; */
+    width: 160px;
+}
+
 .display {
-    text-align: center;
-    margin-bottom: 10px;
-    font-size: 22px;
+    /* word-wrap: break-word; */
+    overflow: hidden;
+    /* resize: none; */
+    /* display: grid; */
+    text-align: right;
+    background-color: rgba(136, 194, 194, 0.575);
+    /* overflow: hidden; */
+    /* white-space: nowrap; */
+    width: 312px;
+    /* margin: 15px 0; */
+    padding: 4px 0px;
+    margin-bottom: 7px;
+    font-size: 54px;
+    font-weight: bold;
+    /* direction: rtl; */
+    border: 4px solid black;
+    /* color: white; */
+    /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif */
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
     /* height: 95vh; */
     /* width: 50vh; */
     margin-top: 50px;
+    /* width: 300px; */
+    /* padding: 0 30%; */
+    /* justify-content: center; */
+    align-items: center;
+    /* border: 4px solid black; */
+    /* margin-left: 320px;
+    margin-right: 320px; */
+}
+
+.calc {
+    border: 8px solid rgba(109, 99, 99, 0.568);
+    border-top: 12px solid rgba(109, 99, 99, 0.568);
 }
 
 button {
-    width: 75px;
-    height: 75px
-    /* font-size: 12px; */
+    width: 80px;
+    height: 75px;
+    border: 1px solid;
+    font-size: 16px;
+    font-weight: bold;
+}
+button:hover {
+    background-color: #4CAF50;
+}
+
+.function {
+    /* color: brown; */
+    background-color: rgb(206, 169, 66);
+    font-weight: bold;
+}
+
+.left {
+    border-left: 1px solid darkgreen;
+}
+
+.right {
+    border-right: 1px solid darkgreen;
+}
+
+.top {
+    border-top: 4px solid darkgreen;
+}
+
+.bot {
+    border-bottom: 4px solid darkgreen;
+}
+
+.size {
+    font-size: 24px;
+}
+
+.color {
+    background-color: #8fca91;
 }
